fix cart bug and repare cropper component

--- a/src/components/containers/CropperComponent/CropperComponent.module.css
+++ b/src/components/containers/CropperComponent/CropperComponent.module.css
@@ -22,13 +22,32 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 5px;
+  
 }
 
 .labelInput {
   /* height: 5rem;
     max-height: 10rem   */
   width: 100%;
+  height: 100%;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid silver;
+  border-radius: 10px;
+  padding: 10px;
+  background: rgb(243, 242, 242);
+  transition: all 0.2s;
+}
+.labelInput:hover {
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.labelInput span {
+  color: silver;
 }
 
 .bgImg {
